--- a/just_blog/templates/app_blog/blog_detail.html
+++ b/just_blog/templates/app_blog/blog_detail.html
@@ -13,21 +13,25 @@
                 <h1 class="blog-detail-title blog-title">{{ blog.title }}</h1>
                 <p class="title-description">{{ blog.description }}</p>
             </div>
-            {% if blog.posts.all %}
+            {% if posts %}
                 <ul class="list-reset posts__list">
-                    {% for post in blog.posts.all %}
-                        <a class="a-reset" href="{% url 'app_blog:post_detail' pk=post.pk %}">
-                            <li class="blog__card flex">
-                                <p class="blog__card__item post__card__title">{{ post.title }}</p>
-                                <p class="blog__card__item post__card__tag">{{ post.get_tag|break_tags|safe }}</p>
+                    {% for post in posts %}
+                        {% if post.is_published %}
+                            <a class="a-reset" href="{% url 'app_blog:post_detail' pk=post.pk %}">
+                                <li class="blog__card flex">
+                                    {% with post.images.all as images %}
+                                         {% if images %}
+                                            {% with images|random as random_image %}
+                                                <img class="blog__card__image" src="{{ random_image.image.url }}" alt="">
+                                            {% endwith %}
+                                         {% endif %}
+                                     {% endwith %}
+                                    <p class="blog__card__item post__card__title">{{ post.title }}</p>
+                                    <p class="blog__card__item post__card__tag">{{ post.get_tag|break_tags|safe }}</p>
 
-                                 {% if post.images.all %}
-                                    {% with post.images.all|random as random_image %}
-                                        <img class="blog__card__image" src="{{ random_image.image.url }}" alt="">
-                                    {% endwith %}
-                                 {% endif %}
-                            </li>
-                        </a>
+                                </li>
+                            </a>
+                        {% endif %}
                     {% endfor %}
                 </ul>
 
@@ -42,7 +46,6 @@
                 <a class="a-reset btn register__btn blog-action-btn" href="{% url 'app_blog:blog_edit' pk=blog.pk %}">{% trans 'Edit the blog' %}</a>
                 <a class="a-reset btn register__btn blog-action-btn" href="{% url 'app_blog:blog_delete' pk=blog.pk %}">{% trans 'Delete the blog' %}</a>
             </p>
-
         {% endif %}
         </div>
     </section>
