--- a/just_blog/templates/app_blog/post_detail.html
+++ b/just_blog/templates/app_blog/post_detail.html
@@ -11,47 +11,49 @@
         <div class="title-container">
             <h1 class="title post-title">{{ post.title }}</h1>
             <p class="post-author-title">
-                <a class="a-reset transition-link" href="{% url 'app_blog:user_blog_list' pk=post.profile.pk %}">
-                    {% trans 'by' %} {{ post.profile.user.username }}
+                <a class="a-reset transition-link" href="{% url 'app_blog:user_blog_list' pk=post.profile_pk %}">
+                    {% trans 'by' %} {{ post.profile_name }}
                 </a>
             </p>
             <p class="title-tag">{{ post.get_tag }}</p>
-            {% if profile and profile == post.profile %}
+            {% if profile == post.profile %}
                 <p class="is_published">
                     <a class="a-reset btn register__btn" href="{% url 'app_blog:publish_or_archive' pk=post.pk %}">{% if post.is_published %}{% trans 'Archive' %}{% else %}{% trans 'Publish' %}{% endif %}</a>
                 </p>
             {% endif %}
         </div>
-        <div class="post-content-container">
-            {% if post.images.all %}
-                <div class="images-box">
-                    <div class="slideshow-container">
-                        {% for image in post.images.all %}
-                            <div class="mySlides fade">
-                                <div class="numbertext">{{ forloop.counter }}</div>
-                                <img src="{{ image.image.url }}" alt="" style="width: 100%;">
-                            </div>
+        {% with post.images.all as images %}
+            <div class="{% if images %}post-content-container{% endif %}">
+                {% if images %}
+                    <div class="images-box">
+                        <div class="slideshow-container">
+                            {% for image in images %}
+                                <div class="mySlides fade">
+                                    <div class="numbertext">{{ forloop.counter }}</div>
+                                    <img class="post-detail-image" src="{{ image.image.url }}" alt="{{ image.title }}">
+                                </div>
+                            {% endfor %}
+                        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                        </div>
+                        <div style="text-align:center">
+                        {% for image in images %}
+                          <span class="dot" onclick="currentSlide({{ forloop.counter }})"></span>
                         {% endfor %}
-                    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                        </div>
                     </div>
-                    <div style="text-align:center">
-                    {% for image in post.images.all %}
-                      <span class="dot" onclick="currentSlide({{ forloop.counter }})"></span>
-                    {% endfor %}
-                    </div>
+                {% endif %}
+                <div class="post-text-container">
+                    {{ post.content|linebreaks }}
                 </div>
-            {% endif %}
-            <div class="post-text-container">
-                {{ post.content|linebreaks }}
             </div>
-        </div>
+        {% endwith %}
             <p>
                 {% if post.profile == profile %}
                     <a class="a-reset btn register__btn" href="{% url 'app_blog:post_edit' pk=post.pk %}">{% trans 'Edit' %}</a>
                     <a class="a-reset btn register__btn" href="{% url 'app_blog:post_delete' pk=post.pk %}">{% trans 'Delete the post' %}</a>
                 {% endif %}
-                <a class="a-reset btn register__btn" href="{% url 'app_blog:blog_detail' pk=post.blog.pk %}">{% trans 'Back to the blog' %}</a>
+                <a class="a-reset btn register__btn" href="{% url 'app_blog:blog_detail' pk=post.blog_pk %}">{% trans 'Back to the blog' %}</a>
             </p>
         </div>
     </section>
@@ -59,30 +61,32 @@
 {% endblock %}
 
 {% block script %}
-    let slideIndex = 1;
-    showSlides(slideIndex);
+    <script>
+        let slideIndex = 1;
+        showSlides(slideIndex);
 
-    function plusSlides(n) {
-      showSlides(slideIndex += n);
-    }
+        function plusSlides(n) {
+          showSlides(slideIndex += n);
+        }
 
-    function currentSlide(n) {
-      showSlides(slideIndex = n);
-    }
+        function currentSlide(n) {
+          showSlides(slideIndex = n);
+        }
 
-    function showSlides(n) {
-      let i;
-      let slides = document.getElementsByClassName("mySlides");
-      let dots = document.getElementsByClassName("dot");
-      if (n > slides.length) {slideIndex = 1}
-      if (n < 1) {slideIndex = slides.length}
-      for (i = 0; i < slides.length; i++) {
-        slides[i].style.display = "none";
-      }
-      for (i = 0; i < dots.length; i++) {
-        dots[i].className = dots[i].className.replace(" active", "");
-      }
-      slides[slideIndex-1].style.display = "block";
-      dots[slideIndex-1].className += " active";
-    }
+        function showSlides(n) {
+          let i;
+          let slides = document.getElementsByClassName("mySlides");
+          let dots = document.getElementsByClassName("dot");
+          if (n > slides.length) {slideIndex = 1}
+          if (n < 1) {slideIndex = slides.length}
+          for (i = 0; i < slides.length; i++) {
+            slides[i].style.display = "none";
+          }
+          for (i = 0; i < dots.length; i++) {
+            dots[i].className = dots[i].className.replace(" active", "");
+          }
+          slides[slideIndex-1].style.display = "block";
+          dots[slideIndex-1].className += " active";
+        }
+    </script>
 {% endblock %}
