finished tests for app_api

--- a/just_blog/templates/app_main/about.html
+++ b/just_blog/templates/app_main/about.html
@@ -16,7 +16,7 @@
                     {% trans 'This is a blogging project that allows see publicated posts of the authorized users' %}
                 </p>
                 <p>
-                    {% trans 'The avaliable languages are English, Russian and Spanish' %}
+                    {% trans 'The available languages are English, Russian and Spanish' %}
                 </p>
                 <p>
                     {% trans 'If you need the API version of this website, please see the step by step instruction givven in the README.MD file ' %}
