--- a/just_blog/static/css/style.css
+++ b/just_blog/static/css/style.css
@@ -13,11 +13,6 @@ script {
   display: none;
 }
 
-/*a {*/
-/*  color: inherit;*/
-/*  text-decoration: none;*/
-/*}*/
-
 img {
   max-width: 100%;
 }
@@ -35,6 +30,8 @@ body {
   font-size: 100%;
   font-family: 'Josefin Sans', Arial, Verdana, sans-serif;
 }
+
+/* globals */
 
 #page-container {
   position: relative;
@@ -163,8 +160,6 @@ body {
 /* footer */
 
 .footer {
-  /*padding: 45px 0;*/
-
   position: absolute;
   bottom: 0;
   width: 100%;
@@ -213,7 +208,6 @@ body {
 
 .latest-posts__link {
   font-size: 16px;
-  /*display: inline-block;*/
 
 }
 .latest-post-rss-item:not(:last-child) {
@@ -224,7 +218,6 @@ body {
   text-align: center;
   margin-bottom: 24px;
   font-size: 18px;
-  /*color: floralwhite;*/
 }
 
 .hero__title {
@@ -279,9 +272,6 @@ body {
   width: 300px;
 }
 
-
-/*border-color: sandybrown*/
-
 .input:focus {
   outline: none;
 }
@@ -294,16 +284,6 @@ body {
   align-items: center;
 }
 
-/*.auth-form input {*/
-/*  font-size: 20px;*/
-/*  padding: 2px 5px;*/
-/*  text-align: center;*/
-/*}*/
-
-/*.auth-form select {*/
-/*  font-size: 15px;*/
-/*}*/
-
 .register__btn {
   font-size: 20px;
   padding: 8px 15px;
@@ -311,14 +291,6 @@ body {
 
 .avatar_input {
   display: none;
-}
-
-.form-auth-para {
-
-}
-
-.avatar-input-label {
-
 }
 
 .cur-avatar-box {
@@ -367,6 +339,7 @@ body {
   padding: 10px 0;
 }
 
+/* blogs */
 
 .no-blogs-msg {
   margin-bottom: 24px;
@@ -680,12 +653,10 @@ body {
   margin: auto;
 }
 
-/* Hide the images by default */
 .mySlides {
   display: none;
 }
 
-/* Next & previous buttons */
 .prev, .next {
   cursor: pointer;
   position: absolute;
@@ -701,20 +672,15 @@ body {
   user-select: none;
 }
 
-/* Position the "next button" to the right */
 .next {
   right: 0;
   border-radius: 3px 0 0 3px;
 }
 
-/* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
   background-color: rgba(0,0,0,0.8);
 }
 
-/* Caption text */
-
-/* Number text (1/3 etc) */
 .numbertext {
   color: #f2f2f2;
   font-size: 12px;
@@ -723,7 +689,6 @@ body {
   top: 0;
 }
 
-/* The dots/bullets/indicators */
 .dot {
   cursor: pointer;
   height: 15px;
@@ -739,7 +704,6 @@ body {
   background-color: #717171;
 }
 
-/* Fading animation */
 .fade {
   animation-name: fade;
   animation-duration: 1.5s;
